# caelid

./: .env-example  .gitignore  Cargo.toml  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
.cargo/: config.toml
.github/workflows/: rust.yml
assets/html/: index.html
assets/html/base/: index.html
assets/html/layouts/: application_v1.html
assets/javascript/: application_v1.tsx
assets/javascript/components/test/: index.tsx
assets/javascript/entry/: application_v1.tsx
assets/javascript/lib/: ujs.ts
config/: logger.yaml
migrations/2022-08-15-002632_create_users/: down.sql  up.sql
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
scripts/: dev  dev.sh  pg  pg_bootstrap  pg_bootstrap.sh  pg_migrate  start.sh  webpack-dev  webpack-dev.sh  webpack_port.sh
scripts/pg_utils/: bootstrap  migrate
src/: main.rs  schema.rs
src/app/: mod.rs
src/app/database/: mod.rs
src/app/database/pg/: mod.rs
src/app/model/: mod.rs  user.rs
src/app/model/user/: authentication.rs  mod.rs  result.rs
src/app/server/: assets.rs  mod.rs  routes.rs
src/app/server/handlers/: base.rs  mod.rs  sub.rs
src/app/server/middleware/: request_info.rs
src/app/server/routes/: mod.rs
src/app/server/shared/: template.rs
src/app/template_engine/: mod.rs
src/internal/: mod.rs
src/internal/ansi/: mod.rs
src/internal/log/: mod.rs
src/internal/pid/: mod.rs
src/internal/tracing/: mod.rs  utils.rs
src/internal/tracing/formatters/: mod.rs  (+1 more)
src/lib/: mod.rs
src/lib/ansi/: mod.rs
src/lib/json/: mod.rs
src/lib/log/: mod.rs
(+9 files in other folders)
