[package]
name = "caelid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-util = "0.3.21"
log = "0.4.17"
num_cpus = "1.13.1"
scheduled-thread-pool = "0.2.6"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tera = "1.16.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
